# buleleng-vacation

./: .gitignore  pyproject.toml  requirement.txt
bulelengVacation/: manage.py
bulelengVacation/article/: models.py  urls.py  views.py
bulelengVacation/article/migrations/: 0001_initial.py
bulelengVacation/auths/: models.py  urls.py  views.py
bulelengVacation/auths/migrations/: 0001_initial.py  0002_alter_customuser_alamat_alter_customuser_ttl.py  0003_loginanalytic.py  0004_loginanalytic_created_at.py  0005_customuser_domisili.py  0006_customuser_is_agency.py
bulelengVacation/bulelengVacation/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bulelengVacation/dashboard/: urls.py  views.py
bulelengVacation/templates/: agency.html  article.html  dashboard_agency.html  detail_agency.html  detail_article.html  detail_wisata.html  hotel.html  index.html  layout.html  login.html  profile.html  register.html  reservasi.html  wisata.html
bulelengVacation/templates/dashboard/: agency.html  artikel.html  feedback.html  index.html  informasi.html  kategori.html  kritik.html  layout.html  report.html  reservasi.html  user.html  wisata.html
bulelengVacation/vacation/: models.py  urls.py  views.py
bulelengVacation/vacation/migrations/: 0001_initial.py  0002_remove_wisata_harga_remove_wisata_kategori_and_more.py  0003_alter_wisata_perizinan.py  0004_wisata_gambar_utama.py  0005_alter_wisata_alamat.py  0006_wisata_emmet_tags.py  0007_wisata_user.py  0008_wisata_pilihan.py  0009_travelagency_vacationanalytic_wisataagency.py  0010_loginwisataanalytic.py  (+18 more)
