[tool.poetry]
name = "buleleng-vacation"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
pillow = "^10.3.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
